<resources>
    <string name="app_name">Running</string>
    <string name="eMail">Email:</string>
    <string name="password">Password:</string>
    <string name="confirmPassword">confirm password:</string>
    <string name="userName">user name:</string>
    <string name="mainEventName">main event name:</string>
    <string name="signIn">sign in</string>
    <string name="signUp">sign up</string>
    <string name="logo1">Running app</string>
    <string name="logo2">bla bla bla :)</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="mainEvent">Main event</string>
    <string name="firstRan">First ran</string>
    <string name="profile_settings">Profile settings</string>
    <string name="log_out">Log out</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="period">Period</string>
    <string name="confirm">confirm</string>
</resources>

