<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:background="@color/colorBackgroundLight">

    <LinearLayout
        android:id="@+id/linearLayoutEditS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <EditText
        android:id="@+id/editTextUserNameR"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/userName"
        android:textColor="@color/colorTextBlue"
        android:textColorHint="@color/colorHintGrey"
        />

      <EditText
        android:id="@+id/editTextEMailR"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:hint="@string/eMail"
        android:textColor="@color/colorTextBlue"
        android:textColorHint="@color/colorHintGrey"/>

        <EditText
        android:id="@+id/editTextPasswordR"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/colorTextBlue"
        android:textColorHint="@color/colorHintGrey"/>

        <EditText
        android:id="@+id/editTextPasswordConfirmR"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="textPassword"
        android:hint="@string/confirmPassword"
        android:textColor="@color/colorTextBlue"
        android:textColorHint="@color/colorHintGrey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonFirstRanR"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_marginEnd="30dp"
                android:text="@string/firstRan"
                android:background="@drawable/shape_button_blue"
                android:textColor="@color/colorTextLight"
                android:onClick="setFirstRan"/>

            <Button
                android:id="@+id/buttonMainEventR"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/mainEvent"
                android:background="@drawable/shape_button_blue"
                android:textColor="@color/colorTextLight"
                android:onClick="setMainEvent"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonSignUpR"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="90dp"
        android:text="@string/signUp"
        android:onClick="signUp"
        android:background="@drawable/shape_button_blue"
        android:textColor="@color/colorTextLight"/>

</LinearLayout>




