<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:background="@color/colorBackgroundLight">

    <include
        android:id="@+id/actionBarM"
        layout="@layout/layout_action_bar"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="4dp">
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/mon"
            android:background="@drawable/shape_background_blue"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/thu"
            android:background="@drawable/shape_background_blue"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/wed"
            android:background="@drawable/shape_background_blue"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/thu"
            android:background="@drawable/shape_background_blue"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/fri"
            android:background="@drawable/shape_background_blue"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/sat"
            android:background="@drawable/shape_background_blue"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/sun"
            android:background="@drawable/shape_background_blue"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"/>

    </LinearLayout>

    <GridView
        android:id="@+id/gridViewM"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:numColumns="7"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/buttonAddM"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_blue"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"
            android:text="add"/>

        <Button
            android:id="@+id/buttonAddConfirmM"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_blue"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"
            android:text="confirm"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/buttonSetM"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_blue"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"
            android:text="set"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewPeriodM"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="results:"
        android:textAlignment="center"
        android:textColor="@color/colorTextGrey"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textViewDistanceM"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="270 km / 5 min 28 sec"
        android:textAlignment="center"
        android:textColor="@color/colorTextGrey"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textViewCountdownM"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="90dp"
        android:text="15 days left"
        android:textAlignment="center"
        android:textColor="@color/colorTextGrey"
        android:textSize="30sp"/>

    </LinearLayout>

    

